applications/media-experimental/base/bookorbit/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bookorbit
  labels:
    app: bookorbit
    app.kubernetes.io/name: bookorbit
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app: bookorbit
